fix: added npm version badge; added automatic nes-ui class switching, dark mode detection; improved build

--- a/docs/styles/globals.scss
+++ b/docs/styles/globals.scss
@@ -1,7 +1,2 @@
 // import the NES UI theme
 @import '../dist/scss/nes-ui.scss';
-
-* {
-  font-size: 0.75rem;
-  box-sizing: border-box;
-}
